add new main tag header tag to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Homework</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <header>
+        <h1>hello world</h1>
+    </header>
+
+    <main>
+        <h2>salom dunyo</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat aspernatur aliquam aperiam maxime id, necessitatibus quia placeat! Veniam tenetur omnis numquam modi delectus? Optio, id, iusto consequuntur maiores totam doloribus fugit consectetur pariatur nemo ea architecto, quas modi magnam soluta. Magnam optio fuga non quaerat, unde porro dicta recusandae dolorum.</p>
+    </main>
 </body>
 </html>
