added footer in index.html

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
         <h2>salom dunyo</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat aspernatur aliquam aperiam maxime id, necessitatibus quia placeat! Veniam tenetur omnis numquam modi delectus? Optio, id, iusto consequuntur maiores totam doloribus fugit consectetur pariatur nemo ea architecto, quas modi magnam soluta. Magnam optio fuga non quaerat, unde porro dicta recusandae dolorum.</p>
     </main>
+
+    <footer>
+        <h3>kgnjge</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi voluptatibus sint ad blanditiis debitis officia sapiente culpa eius odio nobis soluta necessitatibus laboriosam quam reiciendis optio, exercitationem, vel tempora dolor, qui pariatur. Autem minima rerum eligendi ad sit et nobis optio. Laboriosam ex in eos cum ipsa nesciunt quos dolore?</p>
+    </footer>
 </body>
 </html>
