--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 <body>
     <header>
         <h1>hello world</h1>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Home</a></li>
+                    <li>
+                        <a href="#">About</a></li>     
+                         <li>
+                            <a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
