--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>hello world</h1>
 
-        <nav>
+        <navbar>
             <ul>
                 <li>
                     <a href="#">Home</a></li>
@@ -19,7 +19,7 @@
                          <li>
                             <a href="#">Contact</a></li>
             </ul>
-        </nav>
+        </navbar>
     </header>
 
     <main>
